syntax = "proto3";

import "EchoAttributes.proto";

package gatt;
option java_package = "com.philips.emil.protobufEcho";
option java_outer_classname = "GattProto";

message DisServiceData
{
    bytes manufacturerName = 1 [(bytes_size) =  32];
    bytes modelNumber = 2 [(bytes_size) =  32];
    bytes serialNumber = 3 [(bytes_size) =  32];
    bytes hardwareRevision = 4 [(bytes_size) =  32];
    bytes firmwareRevision = 5 [(bytes_size) =  32];
    bytes softwareRevision = 6 [(bytes_size) =  32];
    bytes systemId = 7 [(bytes_size) =  8];
    bytes ieeeRegulatoryCertificationDataList = 8 [(bytes_size) =  32];
    bytes pnpId = 9 [(bytes_size) =  7];
}

service GattServerDisService
{
    option (service_id) = 132;

    rpc SetDisServiceData(DisServiceData) returns(Nothing) { option (method_id) = 1; }
}

message MtuSize
{
    uint32 value = 1;
}

message Handle
{
    uint32 value = 1;
}

message CharacteristicData
{
    Handle handle = 1;
    bytes data = 2 [(bytes_size) = 512];
}

message HandleRange
{
    Handle startHandle = 1;
    Handle endHandle = 2;
}

message Service
{
    bytes uuid = 1 [(bytes_size) = 16];
    HandleRange handles = 2;
}

message Characteristic
{
    bytes uuid = 1 [(bytes_size) = 16];
    Handle handle = 2;
    Handle valueHandle = 3;
    uint32 properties = 4;
}

message Descriptr
//'Descriptor' keyword is not allowed by Echo code generator 
{
    bytes uuid = 1 [(bytes_size) = 16];
    Handle handle = 2;
}

// Value 0 indicates success
// Any non-zero value indicates an error. The actual meaning of the error code is platform specific.
// For ST-based platforms error codes are defined in "Status error codes" section of ST application note AN5270
message GattResult
{
    uint32 value = 1;
}

message ReadResult
{
    CharacteristicData data = 1;
}

service GattClient
{
    option (service_id) = 134;

    rpc MtuSizeExchangeRequest(Nothing) returns (Nothing) { option (method_id) = 1; }

    // In the below block, all methods shall be called after the previous one is completed
    rpc StartServiceDiscovery(Nothing) returns (Nothing) { option (method_id) = 2; }
    rpc StartCharacteristicDiscovery(HandleRange) returns (Nothing) { option (method_id) = 4; }
    rpc StartDescriptorDiscovery(HandleRange) returns (Nothing) { option (method_id) = 6; }

    // In the below block, the methods with a response, shall be called after the previous one is completed
    // Example 1: If Read is called, EnableIndication shall only be called after CharacteristicOperationComplete
    // Example 2: If DisableNotification is called, Write shall only be called after CharacteristicOperationComplete
    // Example 3: If EnableNotification is called, EnableIndication shall only be called after CharacteristicOperationComplete
    rpc Read(Handle) returns (Nothing) { option (method_id) = 8; }
    rpc Write(CharacteristicData) returns (Nothing) { option (method_id) = 9; }
    rpc WriteWithoutResponse(CharacteristicData) returns (Nothing) { option (method_id) = 10; }
    rpc EnableNotification(Handle) returns (Nothing) { option (method_id) = 11; };
    rpc DisableNotification(Handle) returns (Nothing) { option (method_id) = 12; };
    rpc EnableIndication(Handle) returns (Nothing) { option (method_id) = 13; };
    rpc DisableIndication(Handle) returns (Nothing) { option (method_id) = 14; };

    // IndicationDone shall be called for every IndicationReceived
    rpc IndicationDone(Nothing) returns (Nothing) { option (method_id) = 15; };
}

service GattClientResponse
{
    option (service_id) = 135;

    rpc MtuSizeExchangeComplete(MtuSize) returns (Nothing) { option (method_id) = 1; }

    rpc ServiceDiscovered(Service) returns (Nothing) { option (method_id) = 2; }
    rpc ServiceDiscoveryComplete(Nothing) returns (Nothing) { option (method_id) = 3; }
    
    rpc CharacteristicDiscovered(Characteristic) returns (Nothing) { option (method_id) = 4; }
    rpc CharacteristicDiscoveryComplete(Nothing) returns (Nothing) { option (method_id) = 5; }

    rpc DescriptorDiscovered(Descriptr) returns (Nothing) { option (method_id) = 6; }
    rpc DescriptorDiscoveryComplete(Nothing) returns (Nothing) { option (method_id) = 7; }

    rpc ReadResponse(ReadResult) returns (Nothing) { option (method_id) = 8; }

    // Called after completion of characteristic operations with response: Read, Write, Enable/Disable Notification/Indication
    rpc CharacteristicOperationComplete(GattResult) returns (Nothing) { option (method_id) = 9; }

    rpc IndicationReceived(CharacteristicData) returns (Nothing) { option (method_id) = 10; }
    rpc NotificationReceived(CharacteristicData) returns (Nothing) { option (method_id) = 11; }
}

